@@ -2,43 +2,17 @@
 
 ### Start the Simulator
 
-#### Mac
+To run the simulator:
 
-Launch the program by navigating to the root level of this project in a terminal:
-
-```bash
-cd <path/to/this/directory>
-```
-
-Then, run the Simulator jar with the following command (NOTE: It may take up to 10 seconds to launch):
+1. Open terminal/cmd in this directory `<path/to/documents>/Team 1 Machine Simulator Part II CSCI6461Section12Spring2024March32024/`
+2. Run the following command in terminal/cmd:
 
 ```bash
-java --module-path out/artifacts/MIPS_Simulator_jar/ \
-     --add-modules javafx.controls,javafx.fxml,javafx.graphics \
-     -jar out/artifacts/MIPS_Simulator_jar/MIPS_Simulator.jar
+java -jar MIPS_Simulator.jar
 ```
 
-#### Windows: 
-
-When testing on Windows 11 we ran into some issues with compatability between Java FX and the default Orical JDK installed.
-
-Please download these items directly from their respetive hosts.
-- OpenJDK: https://jdk.java.net/21/
-  - Diret Download Link: https://download.java.net/java/GA/jdk21.0.2/f2283984656d49d69e91c558476027ac/13/GPL/openjdk-21.0.2_windows-x64_bin.zip
-- JavaFX lib: https://gluonhq.com/products/javafx/
-  - Direct Download Link: https://download2.gluonhq.com/openjfx/21.0.2/openjfx-21.0.2_windows-x64_bin-sdk.zip
-
-Extract/ unzip the above downloaded folders and place them into the root level of this project.
-
-- javafx-sdk-21.0.2.zip
-- jdk-21.0.2.zip
-
-Use the OpenJDK v21 with the access to the JavaFX SDK modules with this command:
-```bash
-jdk-21.0.2/bin/java  --module-path javafx-sdk-21.0.2/lib --add-modules javafx.controls,javafx.base,javafx.fxml,javafx.graphics,javafx.media,javafx.web --add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED -jar out/artifacts/MIPS_Simulator_jar/MIPS_Simulator.jar
-```
-
-NOTE: The Fonts used in the Windows are different than the font used in Mac, so some of the Register Display windows are a little too small.
+NOTE: This command may take up to ~10 seconds for the application window to launch.
+Please be patient.
 
 ![image info](./pictures/ProjectView_Default.png)
 
